fix: update event on mobile

--- a/src/index.css
+++ b/src/index.css
@@ -127,73 +127,74 @@ body {
   }
 }
 
-.form-container{
+.form-container {
   display: flex;
   align-items: center;
   justify-content: center;
-  width:100%;
-  height:100vh;
+  width: 100%;
+  height: 100vh;
 }
-.login-form{
-  width:fit-content;
-  padding:24px;
+.login-form {
+  width: fit-content;
+  padding: 24px;
   border-radius: 16px;
-  border:1px dashed #bdbdbd;
+  border: 1px dashed #bdbdbd;
 }
 
-label{
+label {
   font-size: 24px;
 }
 
-.input-wrap{
-  margin-top:12px;
+.input-wrap {
+  margin-top: 12px;
 }
 
-input{
-  width:100%;
+input {
+  width: 100%;
   min-width: 348px;
   font-size: 18px;
-  border:1px dotted orange;
+  border: 1px dotted orange;
   border-radius: 8px;
-  padding:8px;
+  padding: 8px;
 }
-.username{
-  margin-bottom:12px;
+.username {
+  margin-bottom: 12px;
 }
-.username,.password{
-  width:100%;
+.username,
+.password {
+  width: 100%;
 }
 
-.submit-btn{
+.submit-btn {
   padding: 12px 16px;
   border-radius: 8px;
   margin-top: 16px;
-  background-color: #00529C;
-  outline:none;
-  border:none;
+  background-color: #00529c;
+  outline: none;
+  border: none;
   font-size: 18px;
-  color:white;
-  cursor: pointer
+  color: white;
+  cursor: pointer;
 }
 
-.dashboard-container{
+.dashboard-container {
   width: fit-content;
   margin: 0 auto;
 }
 
-.dashboard-items{
+.dashboard-items {
   display: flex;
-  gap:48px;
+  gap: 48px;
 }
 
-.dashboard-items img{
-  width:480px;
-  height:240px
+.dashboard-items img {
+  width: 480px;
+  height: 240px;
 }
 
-.dashboard-items .link{
+.dashboard-items .link {
   display: flex;
   align-items: center;
   gap: 16px;
-  margin-bottom:16px;
+  margin-bottom: 16px;
 }
